--- a/basic/index.html
+++ b/basic/index.html
@@ -1,4 +1,17 @@
-<canvas id="canvas" width="720" height="480" style="border:1px solid black"></canvas>
-
-
-<script src="./index.js"></script>
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <title>Canvas Playground !</title>
+    <style type="text/css">
+      canvas {
+        border: 1px solid black;
+      }
+    </style>
+  </head>
+  <body>
+    <canvas id="canvas" width="720" height="480"></canvas>
+    <script src="./index.js"></script>
+    <script src="./path.js"></script>
+    </body>
+</html>
