--- a/basic/index.html
+++ b/basic/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8" />
@@ -12,6 +12,6 @@
   <body>
     <canvas id="canvas" width="720" height="480"></canvas>
     <script src="./index.js"></script>
-    <script src="./path.js"></script>
-    </body>
+    <script src="./squid.js"></script>
+  </body>
 </html>
